--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@nestjs/mapped-types": "*",
 		"@nestjs/mongoose": "^11.0.1",
 		"@nestjs/platform-express": "^10.0.0",
+		"@nestjs/swagger": "^11.0.4",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
 		"mongoose": "^8.10.1",
